style.css
/*
Theme Name:     Pinboard for atjine
Theme URI:      http://github.com/ghelleks/pinboard-atjine
Description:    A Technology Job Is No Excuse's Child theme for Pinboard
Author:         Gunnar Hellekson
Author URI:     http://gunnar.hellekson.com/about/
Template:       pinboard
Version:        0.1.0
*/

/* Import our parent theme stylesheet */
@import url("../pinboard/style.css");

/* center attachment photos */
.page-template-template-full-width-php .hentry.onecol figure.entry-attachment {
   float: none;
   margin: auto;
}

/* 
 * Lazyest Gallery stuff
 */
/* make attachment pages display centered  */
/* remove the godawful folders display from Lazyest Gallery */
.lg_gallery .dir_view .folder { display:none; }
div.lg_gallery div.top_navigator { display:none; }

/* based on pinboard "entry" */
.lg_gallery .dir_view  li.lgf-item {
   float: left;
   display: block;
   background: white;
   border-bottom: #DDD 1px solid;
   box-shadow: 0 0 5px rgba(0, 0, 0, .1);
   -webkit-margin-before: 1em;
   -webkit-margin-after: 1em;
   -webkit-margin-start: 40px;
   -webkit-margin-end: 40px;
   width: 250px;
}

.lg_thumb {
   padding: inherit;
   margin: inherit;
}

div.lg_folder_thumb_image img.thumb {
   width: 100%;
   height: 205;
   margin-left: auto;
   margin-right: auto;
   height: auto;
   border: none;
}

div.lg_thumb_caption {
   padding: 6.1%;
   font-family: "Oswald",sans-serif;
   font-weight: 300;
   letter-spacing: 1px;
   overflow: hidden;
   line-height: 1.62em;
}

div.lg_thumb_caption a {
   font-size: 24px;
}

/* put the tags and the YARPP related enties side-by-side  */
div.entry-tags { 
	margin: 0;
	display:inline-block;
	vertical-align:text-top; 
	width: 50%; 
}
div.entry-tags h3 { }

div.yarpp-related { 
	display:inline-block; 
	vertical-align:text-top; 
	width: 50%; 
}
div.yarpp-related h3 { }

/* don't truncate the titles and border the images, not the images and the title  */
div.yarpp-thumbnails-horizontal a.yarpp-thumbnail span.yarpp-thumbnail-title  { overflow: visible; }
div.yarpp-thumbnails-horizontal a.yarpp-thumbnail  { border: none; }

/* show the yarpp thumbnails at 120px wide, not 67% width  */
.page-template-template-full-width-php .hentry.onecol a.yarpp-thumbnail img.wp-post-image { 
   margin-left: auto; margin-right: auto; border: 1px solid rgba(127, 127, 127, 0.1) ;
   max-width: none;
}

/* make slider images less hilariously large and slightly transparent */
#slider .wp-post-image,
#slider .entry-attachment {
        position:relative;
        top:0;
        left:0;
        width:100%;
	height:300px;
	opacity:0.4;
}  

/* make the slider titles more opaque */
#slider .entry-title {
        background:rgba(0, 0, 0, .65);
}

